--- a/src/html/connect.html
+++ b/src/html/connect.html
@@ -34,35 +34,35 @@
           <h2>Pending Invites</h2>
           <div id="pending-invites">
             <div class="profile">
-              <image class="profile-image pending-invite" src="../assets/sonia.jpg">
+              <img class="profile-image pending-invite" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
               <div class="center-content">
                 <div class="button-submit cancel-invite">Cancel</div>
               </div>
             </div>
             <div class="profile">
-              <image class="profile-image pending-invite" src="../assets/sonia.jpg">
+              <img class="profile-image pending-invite" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
               <div class="center-content">
                 <div class="button-submit cancel-invite">Cancel</div>
               </div>
             </div>
             <div class="profile">
-              <image class="profile-image pending-invite" src="../assets/sonia.jpg">
+              <img class="profile-image pending-invite" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
               <div class="center-content">
                 <div class="button-submit cancel-invite">Cancel</div>
               </div>
             </div>
             <div class="profile">
-              <image class="profile-image pending-invite" src="../assets/sonia.jpg">
+              <img class="profile-image pending-invite" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
               <div class="center-content">
                 <div class="button-submit cancel-invite">Cancel</div>
               </div>
             </div>
             <div class="profile">
-              <image class="profile-image pending-invite" src="../assets/sonia.jpg">
+              <img class="profile-image pending-invite" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
               <div class="center-content">
                 <div class="button-submit cancel-invite">Cancel</div>
