--- a/src/html/self-profile.html
+++ b/src/html/self-profile.html
@@ -20,7 +20,7 @@
       <li><a class="button-submit" href="signup-login-page.html">Logout</a></li>
     </ul>
 
-    <img id="profile-picture" src="http://1.bp.blogspot.com/-DKzHkOGWzRI/VPdpSpkaApI/AAAAAAAAAP8/thGcMVC6qGI/s1600/Jason%2BDavis%2Bheadshot.jpg"></img>
+    <img id="profile-picture" src="../assets/elton.jpg"></img>
     <canvas class="hidden"></canvas>
     <div class="center-content">
       <div id="edit-profile-picture" class="button-submit">Edit Photo</div>
