--- a/src/html/user-profile.html
+++ b/src/html/user-profile.html
@@ -19,7 +19,7 @@
       <li><a class="button-submit" href="discovery.html">Notifications</a></li>
       <li><a class="button-submit" href="signup-login-page.html">Logout</a></li>
     </ul>
-    <image id="profile-picture" src="../assets/sonia.jpg" />
+    <img id="profile-picture" src="../assets/sonia.jpg" />
     <div class="center-content">
       <h1>Sonia Xu</h1>
     </div>
@@ -78,27 +78,27 @@
           <h1>Connections</h1>
           <div>
             <div class="profile">
-              <image class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
         </div>
@@ -108,27 +108,27 @@
             <h1>Similar Profiles</h1>
             <div>
               <div class="profile">
-                <image class="profile-image" src="../assets/sonia.jpg">
+                <img class="profile-image" src="../assets/sonia.jpg">
                 <p>Sonia Xu</p>
               </div>
               <div class="profile">
-                <image class="profile-image" src="../assets/sonia.jpg">
+                <img class="profile-image" src="../assets/sonia.jpg">
                 <p>Sonia Xu</p>
               </div>
               <div class="profile">
-                <image class="profile-image" src="../assets/sonia.jpg">
+                <img class="profile-image" src="../assets/sonia.jpg">
                 <p>Sonia Xu</p>
               </div>
               <div class="profile">
-                <image class="profile-image" src="../assets/sonia.jpg">
+                <img class="profile-image" src="../assets/sonia.jpg">
                 <p>Sonia Xu</p>
               </div>
               <div class="profile">
-                <image class="profile-image" src="../assets/sonia.jpg">
+                <img class="profile-image" src="../assets/sonia.jpg">
                 <p>Sonia Xu</p>
               </div>
               <div class="profile">
-                <image class="profile-image" src="../assets/sonia.jpg">
+                <img class="profile-image" src="../assets/sonia.jpg">
                 <p>Sonia Xu</p>
               </div>
           </div>
