--- a/src/html/self-profile.html
+++ b/src/html/self-profile.html
@@ -3,12 +3,17 @@
 <html>
   <head>
     <title>Minder</title>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+
     <link rel="stylesheet" type="text/css" href="../styles/profile.css">
     <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
+
+    <script src="http://maps.google.com/maps/api/js?sensor=false"
+           type="text/javascript"></script>
   </head>
 
   <body id="page-container">
@@ -55,9 +60,11 @@
           </div>
           <div id="location" class="info">
             <h2 id="ec-location">Location <span id="edit-location" class="edit">(Edit)</span></h2>
-            <p id="edit-hometown"><strong>Hometown: </strong><span id="hometown">Alhambra, CA 91803</span></p>
-            <p id="edit-past"><strong>Past: </strong><span id="past">Millbrae, CA 94030</span></p>
-            <p id="edit-current"><strong>Current: </strong><span id="current">Irvine, CA 92612</span></p>
+            <p id="edit-current">
+              <strong>Current: </strong>
+              <span id="current">Irvine, CA 92612</span>
+              <div id="location-map"></div>
+            </p>
           </div>
         </div>
       </div>
