--- a/src/html/self-profile.html
+++ b/src/html/self-profile.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" type="text/css" href="../styles/profile.css">
     <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
-
-    <script src="http://maps.google.com/maps/api/js?libraries=places&key=AIzaSyAp1-GKiZX19UcOZjRaTLlurgboIyS6UT8"
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="http://maps.google.com/maps/api/js?sensor=false&key=AIzaSyAp1-GKiZX19UcOZjRaTLlurgboIyS6UT8"
            type="text/javascript"></script>
   </head>
 
@@ -32,20 +32,20 @@
       <canvas class="hidden"></canvas>
     </div>
     <div class="center-content">
-      <h1>Elton Xue</h1>
+      <h1 id="name">Elton Xue</h1>
     </div>
 
     <div>
     <div class="center-content">
       <div class="split-page">
         <div class="info">
-          <h2 id="ec-description">Description <span id="edit-description" class="edit">(Edit)</span></h2>
+          <h2 id="edit-description-container">Description <span id="edit-description" class="edit">(Edit)</span></h2>
           <div id="description-text-container">
             <p id="description-text">Hello, my name is Elton and I'm a recent graduate who's looking to share my knowledge of programming. I mainly focus primarily on full stack web development, but have dwelled into mobile development a bit. My rates are $15/hr, which is a big steal compared to other mentors in coding!</p>
           </div>
         </div>
         <div id="education" class="info">
-          <h2 id="ec-education">Education <span id="edit-education" class="edit">(Edit)</span></h2>
+          <h2 id="edit-education-container">Education <span id="edit-education" class="edit">(Edit)</span></h2>
           <h2 id="edit-school"></strong>School: </strong><span id="school">University of California, Irvine -> Expected 2019</span></h2>
           <p id="edit-major"><strong>Major: </strong><span id="major">Computer Science w/ a specialization in Networked Systems</span></p>
           <p id="edit-minor"><strong>Minor: </strong><span id="minor">Statistics</span></p>
@@ -56,10 +56,10 @@
       <div class="center-content">
         <div class="split-page">
           <div id="tags" class="info">
-            <h2 id="ec-tags">Tags <span id="edit-tags" class="edit">(Add)</span></h2>
+            <h2 id="edit-tags-container">Tags <span id="edit-tags" class="edit">(Add)</span></h2>
           </div>
           <div id="location" class="info">
-            <h2 id="ec-location">Location <span id="edit-location" class="edit">(Edit)</span></h2>
+            <h2 id="edit-location-container">Location <span id="edit-location" class="edit">(Edit)</span></h2>
             <p id="edit-current">
               <strong>Current: </strong>
               <span id="current">Irvine, CA 92612</span>
